--- a/Набір_даних_про_об’єкти_нерухомості_.ipynb
+++ b/Набір_даних_про_об’єкти_нерухомості_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "16Sc8Ehw625NcbE2WpJnAwbMRTtEPavkf",
-      "authorship_tag": "ABX9TyNsVejCYl3+osRzHvkZFUtw",
+      "authorship_tag": "ABX9TyOnpmKMeEfAOTnMQN8rgYkE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Завантажте за посиланням набір даних про об’єкти нерухомості, проданих в окрузі King Count у період із травня 2014 по травень 2015 року. Докладніше про ці дані можна прочитати тут."
+        "# Завантажте за посиланням набір даних про об’єкти нерухомості, проданих в окрузі King Count у період із травня 2014 по травень 2015 року. Докладніше про ці дані можна прочитати тут.\n",
+        "https://www.kaggle.com/datasets/harlfoxem/housesalesprediction"
       ],
       "metadata": {
         "id": "r_ofag2_IHNF"
