--- a/Task_№8(Apriori,_Clustering,_PCA).ipynb
+++ b/Task_№8(Apriori,_Clustering,_PCA).ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "mount_file_id": "1Ug1pc-TTkxt8C4pdfArhGiV0-8MGNiVV",
-      "authorship_tag": "ABX9TyPkDlIF5391GeEVEA9LX3fQ",
+      "mount_file_id": "https://github.com/Fighter1303/hello-world/blob/main/Task_%E2%84%968(Apriori%2C_Clustering%2C_PCA).ipynb",
+      "authorship_tag": "ABX9TyMP1d0s4bcim5D7pQNoFizn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "TbeHOOKynmUH"
       },
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "FzRcmyN_iKte"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -74,9 +74,9 @@
           "height": 143
         },
         "id": "uaGfvplLn0SQ",
-        "outputId": "d705cdae-8bb9-4c8d-9e05-a207f2a9085a"
+        "outputId": "11889427-dd35-4967-bcf4-44e8b3bcdd5d"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -89,7 +89,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-58c6d3a2-6aa9-4803-8492-ac96b43a7c04\">\n",
+              "  <div id=\"df-e8c7f9b4-c794-4e88-a84c-aa303e6e542f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -136,7 +136,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-58c6d3a2-6aa9-4803-8492-ac96b43a7c04')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e8c7f9b4-c794-4e88-a84c-aa303e6e542f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -187,12 +187,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-58c6d3a2-6aa9-4803-8492-ac96b43a7c04 button.colab-df-convert');\n",
+              "          document.querySelector('#df-e8c7f9b4-c794-4e88-a84c-aa303e6e542f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-58c6d3a2-6aa9-4803-8492-ac96b43a7c04');\n",
+              "          const element = document.querySelector('#df-e8c7f9b4-c794-4e88-a84c-aa303e6e542f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -215,7 +215,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 6
         }
       ]
     },
@@ -238,9 +238,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FcY1nwLLRpqy",
-        "outputId": "1b0d0bcc-d145-4689-b1d4-4ff6442d46ae"
+        "outputId": "02227f44-2040-47eb-dcb3-5645441e4e3f"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,9 +270,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "adamPl7HoHjO",
-        "outputId": "c9ba9410-e956-4ada-93c1-eae9fdebd3a3"
+        "outputId": "329be77e-41fe-4d36-d673-b673a4bebcad"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,7 +282,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 8
         }
       ]
     },
@@ -296,9 +296,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "26kJCnaOPuxD",
-        "outputId": "42c4c7a1-72f7-45b8-9b00-7d90db354436"
+        "outputId": "f21f78a5-26d8-4604-a6bb-785e1c6497d9"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,7 +308,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 9
         }
       ]
     },
@@ -323,9 +323,9 @@
           "height": 36
         },
         "id": "lo1wykF1Q3k6",
-        "outputId": "13c1fb56-1b90-4cfc-8a63-208c0aa7e98e"
+        "outputId": "5c3c5d2e-308b-4d7b-f591-ebcc7257b5a1"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -338,7 +338,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 10
         }
       ]
     },
@@ -353,9 +353,9 @@
           "height": 36
         },
         "id": "QenFBbkFRZzr",
-        "outputId": "ff036381-5b3f-4a9a-c537-563ccd24aa67"
+        "outputId": "9813d402-1b0a-4ad0-a448-1ef1c63c149a"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -368,7 +368,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 11
         }
       ]
     },
@@ -400,9 +400,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LGjdpWnwU8h4",
-        "outputId": "e3b55fdc-76e2-4433-a64c-3cf7835c9879"
+        "outputId": "5564111d-2d1b-48e3-ccc4-466894bcb2ad"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -416,7 +416,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 12
         }
       ]
     },
@@ -448,16 +448,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cC_h1EvxiJ0s",
-        "outputId": "563d0513-f325-4a2d-8f8f-bff54a97b8e8"
+        "outputId": "cc7cf51a-b8b1-41ed-d6fa-51ab7653e69e"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: apyori in /usr/local/lib/python3.10/dist-packages (1.1.2)\n"
+            "Collecting apyori\n",
+            "  Downloading apyori-1.1.2.tar.gz (8.6 kB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Building wheels for collected packages: apyori\n",
+            "  Building wheel for apyori (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for apyori: filename=apyori-1.1.2-py3-none-any.whl size=5956 sha256=037eadaf345988f525f3af46584a13432819d573004a23c182cec855b12a052a\n",
+            "  Stored in directory: /root/.cache/pip/wheels/c4/1a/79/20f55c470a50bb3702a8cb7c94d8ada15573538c7f4baebe2d\n",
+            "Successfully built apyori\n",
+            "Installing collected packages: apyori\n",
+            "Successfully installed apyori-1.1.2\n"
           ]
         }
       ]
@@ -470,7 +478,7 @@
       "metadata": {
         "id": "1Y4BRgWN_YqP"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -484,9 +492,9 @@
           "height": 143
         },
         "id": "IY5rZrs5Gjpe",
-        "outputId": "8c963e2f-a628-40bf-d069-ff7adc193767"
+        "outputId": "47c0d9fc-8627-4fad-96fd-058587634236"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -499,7 +507,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6dfee576-01ca-4d3f-a4ad-e28580cb3284\">\n",
+              "  <div id=\"df-9c16cfd6-5a42-47c8-8b32-d6209e05d511\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -546,7 +554,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6dfee576-01ca-4d3f-a4ad-e28580cb3284')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9c16cfd6-5a42-47c8-8b32-d6209e05d511')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -597,12 +605,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6dfee576-01ca-4d3f-a4ad-e28580cb3284 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9c16cfd6-5a42-47c8-8b32-d6209e05d511 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6dfee576-01ca-4d3f-a4ad-e28580cb3284');\n",
+              "          const element = document.querySelector('#df-9c16cfd6-5a42-47c8-8b32-d6209e05d511');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -625,7 +633,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 15
         }
       ]
     },
@@ -637,7 +645,7 @@
       "metadata": {
         "id": "YqMgW7KxfNE_"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -657,7 +665,7 @@
       "metadata": {
         "id": "9iIdniUOaFCt"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -679,7 +687,7 @@
       "metadata": {
         "id": "yUNwb_fxdbKd"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -701,9 +709,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Jo4q7YNeJNu",
-        "outputId": "c84c5226-d394-430a-c326-eff81e0004a5"
+        "outputId": "1562838d-3de9-4734-dccf-f739f22d9782"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -724,9 +732,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4StwEAd6eg0q",
-        "outputId": "3b3fb6a1-8ddb-4807-9334-e5059c7f266d"
+        "outputId": "98790197-608c-4d4b-d61b-e378b464cb59"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +744,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 20
         }
       ]
     },
@@ -761,7 +769,7 @@
       "metadata": {
         "id": "35-Qq98SiTQE"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -781,7 +789,7 @@
       "metadata": {
         "id": "66DmdEuDlzZX"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -801,7 +809,7 @@
       "metadata": {
         "id": "NDD8ytPx6rpe"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -828,7 +836,7 @@
       "metadata": {
         "id": "YXeeVktMBBKO"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -852,9 +860,9 @@
           "height": 112
         },
         "id": "r9I3vzkfEf2M",
-        "outputId": "b4092185-1ce0-4c95-aadd-d5575e85ae64"
+        "outputId": "5578af46-6396-4024-ad40-9da4e8de329f"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -862,11 +870,11 @@
             "text/plain": [
               "    Left Hand Side   Right Hand Side   Support  Confidence      Lift\n",
               "176     whole milk  other vegetables  0.010685    0.094457  0.675275\n",
-              "201     rolls/buns        whole milk  0.008831    0.092593  0.661944"
+              "201     whole milk        rolls/buns  0.008831    0.092593  0.661944"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-678c8018-2829-4609-8c3c-4777c99133fc\">\n",
+              "  <div id=\"df-9d90d30b-2d3e-4314-8110-ac3bf19ecf15\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -904,8 +912,8 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>201</th>\n",
-              "      <td>rolls/buns</td>\n",
               "      <td>whole milk</td>\n",
+              "      <td>rolls/buns</td>\n",
               "      <td>0.008831</td>\n",
               "      <td>0.092593</td>\n",
               "      <td>0.661944</td>\n",
@@ -913,7 +921,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-678c8018-2829-4609-8c3c-4777c99133fc')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9d90d30b-2d3e-4314-8110-ac3bf19ecf15')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -964,12 +972,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-678c8018-2829-4609-8c3c-4777c99133fc button.colab-df-convert');\n",
+              "          document.querySelector('#df-9d90d30b-2d3e-4314-8110-ac3bf19ecf15 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-678c8018-2829-4609-8c3c-4777c99133fc');\n",
+              "          const element = document.querySelector('#df-9d90d30b-2d3e-4314-8110-ac3bf19ecf15');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -992,7 +1000,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 25
         }
       ]
     },
